# ai-evals-scorecard

./: README.md  pyproject.toml
assets/: README.md
demo/input/: dataset.baseline.jsonl  dataset.candidate.jsonl  scorecard.yaml
demo/output/: baseline-report.json  baseline-vs-candidate.json  candidate-report.json  demo-summary.json
docs/: azure-foundry.md  demo.md  eval-schema.md  implementation-plan.md  runner-design.md
examples/: dataset.support-workflow.jsonl  report.run-summary.json  scorecard.yaml
reports/: compare-000-001.json  run-000.json  run-001.json
scripts/: run_live_demo.py
src/ai_evals_scorecard/: __init__.py  __main__.py  azure_backend.py  backend.py  cli.py  compare.py  config.py  mock_backend.py  models.py  parsers.py  reporting.py  scoring.py
tests/: test_cli_execution.py  test_compare.py  test_scoring.py
